# CFramework

./: .gitignore  CMakeLists.txt  LICENSE  cf_user_config_template.h
cf_core/include/: cf.h  cf_assert.h  cf_common.h  cf_config.h  cf_status.h  cf_types.h
cf_core/include/hal/: cf_gpio.h  cf_gpio_port.h  cf_uart.h  cf_uart_port.h
cf_core/include/os/: cf_critical.h  cf_mutex.h  cf_queue.h  cf_task.h  cf_time.h  cf_timer.h
cf_core/include/utils/: cf_log.h  cf_log_uart_sink.h  cf_ringbuf.h  cf_string.h
cf_core/port/esp32/: cf_gpio_esp32.c  cf_uart_esp32.c
cf_core/port/stm32l4/: cf_gpio_stm32l4.c  cf_uart_stm32l4.c
cf_core/src/: cf_assert.c  cf_status.c
cf_core/src/hal/: cf_gpio.c  cf_uart.c
cf_core/src/os/: cf_mutex.c  cf_queue.c  cf_task.c  cf_timer.c
cf_core/src/utils/: cf_log.c  cf_log_uart_sink.c  cf_ringbuf.c
cf_middleware/event/: DOMAIN_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  cf_event.c  cf_event.h  cf_event_domain_template.h  cf_event_types.h
cf_middleware/event/domains/: cf_event_domain_rain.h
cf_middleware/mempool/: cf_mempool.c  cf_mempool.h
cf_middleware/threadpool/: cf_threadpool.c  cf_threadpool.h
docs/: INTEGRATION_GUIDE.md  QUICK_START.md
examples/01_blinky/: main.c
examples/02_threadpool_demo/: README.md  main.c
examples/02_threadpool_demo/esp/: CMakeLists_Main.txt  CMakeLists_Root.txt  main_blink.c  main_log.c  main_uart.c
examples/03_event_system_demo/: main.c
